Stop using martini. Use gorilla and resource burner. Score: 24267

--- a/isucon4_qual/go/server/Makefile
+++ b/isucon4_qual/go/server/Makefile
@@ -1,2 +1,5 @@
+all: template.go resource.rs.go
 template.go: template.tmpl
 	blackburner -o template.go template.tmpl
+resource.rs.go: public/*
+	resourceburner -p server resource.json
